--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
-<!DOCTYPE tml>
+<!DOCTYPE html>
 <html>
-  <h1>this is a test site</h1>
+<head>
+  <title>Test Site</title>
+</head>
+<body>
+  <h1>This is a test site</h1>
+
+  <!-- GitHub Issue Comments Form -->
+  <div>
+    <h2>Leave a Comment</h2>
+    <form action="https://github.com/yourusername/yourrepository/issues/new" method="post">
+      <input type="hidden" name="title" value="Comment:">
+      <textarea name="body" placeholder="Your comment"></textarea>
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+  <!-- End GitHub Issue Comments Form -->
+
+</body>
 </html>
