--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- GitHub Issue Comments Form -->
   <div>
     <h2>Leave a Comment</h2>
+    <p>Please enable cookies in your browser to use the GitHub commenting feature.</p>
     <form action="https://github.com/yourusername/yourrepository/issues/new" method="post">
       <input type="hidden" name="title" value="Comment:">
       <textarea name="body" placeholder="Your comment"></textarea>
